Fix search bar for mobile
Galaxy S5 and iPhone 5 resolutions are too small. Can't fix it easily.

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -349,6 +349,14 @@
   }
 }
 
+@mixin hook-drop-misc() {
+  @media (max-width: $breakpoint-small) {
+    .uk-drop {
+      width: 35vw;
+    }
+  }
+}
+
 @mixin hook-utility-misc() {
   .uk-header-overlay {
     background: linear-gradient(
